Allow the deployed frontend through CORS
The allowed origins were hardcoded to localhost:3000 and :3002, so a
frontend deployed anywhere else is blocked by the browser before a
single request leaves it. The list now takes additional origins from
CORS_ALLOWED_ORIGINS, comma-separated, and keeps the localhost ports for
development.

Not a wildcard: allowCredentials is true, and browsers reject '*' with
credentials anyway - it would also mean any site on the internet could
make authenticated calls on a logged-in user's behalf.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>